src/test/ui/dropck/dropck-eyepatch-extern-crate.nll.stderr
error[E0597]: `c_shortest` does not live long enough
  --> $DIR/dropck-eyepatch-extern-crate.rs:59:28
   |
LL |     pr = Pr("pr", &c_long, &c_shortest);
   |                            ^^^^^^^^^^^ borrowed value does not live long enough
...
LL | }
   | -
   | |
   | `c_shortest` dropped here while still borrowed
   | borrow later used here, when `pr` is dropped
   |
   = note: values in a scope are dropped in the opposite order they are defined

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
